# carolina-projects

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
blog/: index.html
blog/ideias_posts/: index.html
docs/: index.md
docs/blog/: ideias_posts.md  index.md
docs/blog/posts/: 20250903_primeiro_post
